tests/NormalTests/paczka2/big_fuzzy/96030893.err
Error in line 8: KC3opJ A637 46,1
Error in line 14: XDhIx5Ghbx6 A637 76,6
Error in line 18: XDhIx5Ghbx6 S828 20,2
Error in line 20: XDhIx5Ghbx6 S102 68,5
Error in line 32: XDhIx5Ghbx6 A637 57,9
Error in line 41: Xx1C0HcRc S87 94,7
Error in line 58: S102 S828 24,0
Error in line 62: S102 A637 94,0
Error in line 63: Xx1C0HcRc S102 96,6
Error in line 72: sTvdB S87 65,35
Error in line 70: sTvdB S87 37,2
Error in line 66: W723r9n S828 0,7
Error in line 90: Xx1\0HcRc S102 28,3
Error in line 86: W723r9n S102 67,1
Error in line 91: Xx1C0HcRc S102 70,8
Error in line 96: KC3opJ S87 66,1
Error in line 110: S102 S828 13,3
Error in line 118: Xx1C0HcRc S102 84,1
Error in line 120: XDhIx5Ghbx6 S102 97,7
Error in line 125: S102 S7 49,4
Error in line 128: p0oTsfZZvc A637 61,7
Error in line 121: Xx1C0HcRc A637 21,8
Error in line 122: S102 A637 4,0
Error in line 132: S102 S87 85,0
Error in line 140: S102 A637 81,7
Error in line 139: KC3opJ S828 93,2
Error in line 148: XDhIx5Ghbx6 S87 36,92
Error in line 151: W723r9n A637 14,5
Error in line 158: KC3opJ S87 23,0
Error in line 160: p0oTsfZZvc S102 39,1
Error in line 159: KC3opJ S828 89,2
Error in line 166: p0oTsfZZvc A637 86,0
Error in line 169: p0oTsfZZvc S102 47,7
Error in line 172: KC3opJ S102 94,0
Error in line 147: Xx1C0HcRc S828 182,5
Error in line 181: S102 A637 30,1
Error in line 185: S102 S102 88,6
Error in line 188: KC3opJ A637 74,7
Error in line 137: XDhIx5Ghbx6 S87 14,3
Error in line 179: sTvdB S87 34,1
Error in line 199: XDhIx5Ghbx6 S828 59,8
Error in line 204: XDhIx5Ghbx6 A637 9,1
Error in line 205: p0oTsfZZvc S87 50,2
Error in line 212: p0oTsfZZvc A637 89,6
Error in line 207: sTvdB S828 59,5
Error in line 222: S102 A637 9,28
Error in line 220: S102 A637 6,0
Error in line 237: W723r9n A637 47,0
Error in line 239: XDhIx5Ghbx6 S102 99,1
Error in line 234: KC3opJ S87 89,2
Error in line 238: W723r9n S828 72,8
